# risk_system

./: .gitignore  CLAUDE.md  CalculRisqueMark5.py  Euro Stoxx 50 - Sigles et Entreprises.xlsx  README.md  base.ipynb  pyproject.toml  requirements.txt
app/: Accueil.py  app.py
app/pages/: 2_Parametres.py  3_Nappe_de_Volatilite.py  4_Stress_Test.py
data/reference/: euro_stoxx_50_universe.xlsx  sp500_top50_universe.xlsx
scripts/: create_universe.py  fetch_data.py  make_demo_snapshot.py
src/risk_system/: __init__.py  config.py  greeks.py  implied_vol.py  market_data.py  pricing.py  qc.py  scenarios.py  surface.py  svi.py
tests/: test_greeks.py  test_implied_vol.py  test_pricing.py
