[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-system"
version = "0.1.0"
description = "Options pricing system for Euro Stoxx 50 via Interactive Brokers"
requires-python = ">=3.11"
dependencies = [
    "ib_insync>=0.9.86",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
